FIXED ABOUT GRID LAYOUT ISSUE
Set display to block for the about section in projects.css to stop
the grid layout for the about me on the landing page being used.

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -12,6 +12,7 @@ header {
 
 /*About section.*/
 #about {
+    display: block;
     padding-top: 8vh;
 }
 
